// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 224.39999999999998,
                "left": 65.287109375,
                "lineHeight": 224.39999999999998,
                "position": "absolute",
                "top": -17,
              }
            }
          >
            T
          </Text>
          <View
            style={
              Object {
                "height": 168,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 144,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                his
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 196,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                being
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 288,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Black
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 379,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                History
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 496,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Month,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 609,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                last
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 144,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 0,
                "width": "100%",
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 224.39999999999998,
                "left": 68.375,
                "lineHeight": 224.39999999999998,
                "position": "absolute",
                "top": -17,
              }
            }
          >
            Q
          </Text>
          <View
            style={
              Object {
                "height": 168,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 153,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Some
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 248,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                years
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 338,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ago
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 403,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                I
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 421,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                made
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 515,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                the
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 571,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                decision
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 153,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 191,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                take
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 264,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                as
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 308,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 335,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                friend
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 431,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 458,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                woman
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 579,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                who
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 651,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 56,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 153,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 112,
                  }
                }
              >
                very
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 34,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 223,
                    "lineHeight": 56,
                    "position": "absolute",
                    "top": 112,
                  }
                }
              >
                opinionated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 34,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 56,
                    }
                  }
                >
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`5. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 34,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 56,
                    }
                  }
                >
                  This being Black History Month, last week
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
